2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c:
	  Fix handling of isFree for register operands.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/gen.c:
	  More flexible use of A in cast.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc2.cc:
	  Fix checking of XA and reenable use of assignment.
	* src/hc08/gen.c:
	  Additional debugging output.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCset.c:
	  Additional assertion.
	* src/hc08/ralloc.c:
	  Avoid buffer overflow.
	* src/hc08/ralloc2.cc:
	  Do not use assignment for now.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCicode.h,
	  src/SDCCicode.c:
	  Made isOperandLiteral() work on const operand *.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/hc08/ralloc.c:
	  Cleanup.
	* src/hc08/gen.c:
	  Made genDjnz() more flexible.
	* src/hc08/ralloc2.cc:
	  Disallow X, A for now.

2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc,
	  src/hc08/ralloc2.cc:
	  Make optimal register allocator less port-specific.

2012-04-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/gen.c,
	  src/hc08/ralloc2.cc,
	  src/hc08/gen.c,
	  src/hc08/ralloc.c,
	  src/SDCCicode.c:
	  Optimal register allocator for hc08 working partially.

2012-04-11 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (ifOperandsHave): fixed bug #3516746

2012-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/string.c:
	  Added test for strrchr().
	* src/z80/gen.c,
	  src/SDCCpeeph.c:
	  Fixed memory leaks.

2012-04-10 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc.c,
	  src/hc08/ralloc.c,
	  src/hc08/gen.c: