@@ -1,5 +1,10 @@
 2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* support/regression/tests/gcc-torture-execute-920428-1.c:
+	  Reformatted test.
+
+2012-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/hc08/gen.c:
 	  Fix handling of isFree for register operands.
 
